hphp/hack/test/typecheck/__clone.php.exp
File "__clone.php", line 11, characters 10-16:
__clone is a magic method and cannot be called directly (NastCheck[3011])
